Implement M6 Library organization and Practice on web and Android
